--- a/myproject/authentication/templates/index.html
+++ b/myproject/authentication/templates/index.html
@@ -6,25 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <style>
-        header {
-        background-color: #666;
-        padding: 30px;
-        text-align: center;
-        font-size: 35px;
-        color: white;
-        }
-        nav {
+      body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      
+      .topnav {
+        overflow: hidden;
+        background-color: #333;
+      }
+      
+      .topnav a {
         float: left;
-        width: 15%;
-        height: 500px; /*only for demonstration, should be removed */
-        background: #ccc;
-        padding: 20px;
-        }
-        nav ul {
-        list-style-type: none;
-        padding: 0;
-        }
-    </style>
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+      
+      .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      
+      .topnav a.active {
+        background-color: #04AA6D;
+        color: white;
+      }
+      </style>
 </head>
 <body>
 
@@ -40,16 +50,19 @@
 
 
     {% if user.is_authenticated %}
-    <header>
-        <h4>welcome {{fname}}</h4>
-    </header>
-    <section>
-        <nav>
-          <ul>
-            <li><a href="/dashboard">Dash Board</a></li>
-            <li><a href="/signout">SignOut</a></li>
-          </ul>
-        </nav>
+
+        
+        <div class="topnav">
+          <a class="active" href="#home">Home</a>
+          <a href="/dashboard" target="_top">Dashboard</a>
+          <a href="#about">About</a>
+          <a href="/signout">SignOut</a>
+        </div>
+        
+        <div style="padding-left:16px">
+          <h4>welcome {{fname}}</h4>
+        </div>
+        
     {% else %}
     <button type="submit"><a href="/signup">SignUp</a></button>
     <br/>
