--- a/myproject/authentication/templates/signin.html
+++ b/myproject/authentication/templates/signin.html
@@ -5,6 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
+    <style>
+        body {font-family: Arial, Helvetica, sans-serif;}
+        form {border: 3px solid #f1f1f1;}
+        
+        input[type=text], input[type=password] {
+          width: 50%;
+          padding: 12px 20px;
+          margin: 8px 0;
+          display: inline-block;
+          border: 1px solid #ccc;
+          box-sizing: border-box;
+        }
+        
+        button {
+          background-color: #04AA6D;
+          color: white;
+          padding: 14px 20px;
+          margin: 8px 0;
+          border: none;
+          cursor: pointer;
+          width: 50%;
+        }
+        
+        button:hover {
+          opacity: 0.8;
+        }
+        
+        .cancelbtn {
+          width: auto;
+          padding: 10px 18px;
+          background-color: #f44336;
+        }
+        
+        .container {
+          padding: 16px;
+        }
+        
+        span.psw {
+          float: right;
+          padding-top: 16px;
+        }
+        
+        /* Change styles for span and cancel button on extra small screens */
+        @media screen and (max-width: 100px) {
+          span.psw {
+             display: block;
+             float: none;
+          }
+          .cancelbtn {
+             width: 50%;
+          }
+        }
+        </style>
 </head>
 <body>
 
@@ -20,23 +73,26 @@
     <h3 align="center">Log In to your account!</h3>
     <form method="post" action="/signin" class="mb-2">
         {% csrf_token %}
-        <table align="center" border="0">
-        <tr>
-        <div class="form-group">
-            <td><label for="username">Username</label></td>
-            <td><input type="text" class="form-control" id="username" name="username" placeholder="Enter Your Username" Required></td>
+        
+          <div class="container">
+            <label for="uname"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+          </div>
+          <div class="container">
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+          </div>
+          <div class="container">     
+            <button type="submit">Login</button>
+            
+            <label>
+              <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
         </div>
-        </tr>
-        <tr>
-        <div class="form-group">
-            <td><label for="pass1">Password</label></td>
-            <td><input type="password" class="form-control" id="pass1" name="pass1" placeholder="Enter Your Password" Required></td>
-        </div>
-        </tr>
-        <tr>
-        <td><button type="submit" class="btn btn-primary">Log In</button></td>
-        </tr>
-        </table>
+          <div class="container" style="background-color:#f1f1f1">
+            <button type="button" class="cancelbtn">Cancel</button>
+            <span class="psw">Forgot <a href="#">password?</a></span>
+          </div>
         <h4 align="center">Don't have Account <a href="signup">SignUp</a></h4>
     </form>
 </body>
