--- a/myproject/authentication/templates/signup.html
+++ b/myproject/authentication/templates/signup.html
@@ -6,14 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <style>
-        td{
-            border-radius: 10px;
-            border-collapse: separate;
+        body {font-family: Arial, Helvetica, sans-serif;}
+        * {box-sizing: border-box}
+        
+        /* Full-width input fields */
+        input[type=text], input[type=password] {
+          width: 100%;
+          padding: 15px;
+          margin: 5px 0 22px 0;
+          display: inline-block;
+          border: none;
+          background: #f1f1f1;
         }
-        input{
-            border-radius: 10px;
+        
+        input[type=text]:focus, input[type=password]:focus {
+          background-color: #ddd;
+          outline: none;
         }
-    </style>
+        
+        hr {
+          border: 1px solid #f1f1f1;
+          margin-bottom: 25px;
+        }
+        
+        /* Set a style for all buttons */
+        button {
+          background-color: #04AA6D;
+          color: white;
+          padding: 14px 20px;
+          margin: 8px 0;
+          border: none;
+          cursor: pointer;
+          width: 100%;
+          opacity: 0.9;
+        }
+        
+        button:hover {
+          opacity:1;
+        }
+        
+        /* Extra styles for the cancel button */
+        .cancelbtn {
+          padding: 14px 20px;
+          background-color: #f44336;
+        }
+        
+        /* Float cancel and signup buttons and add an equal width */
+        .cancelbtn, .signupbtn {
+          float: left;
+          width: 100%;
+        }
+        
+        /* Add padding to container elements */
+        .container {
+          padding: 16px;
+        }
+        
+        /* Clear floats */
+        .clearfix::after {
+          content: "";
+          clear: both;
+          display: table;
+        }
+        
+        /* Change styles for cancel button and signup button on extra small screens */
+        @media screen and (max-width: 300px) {
+          .cancelbtn, .signupbtn {
+             width: 100%;
+          }
+        }
+        </style>
 </head>
 <body>
 
@@ -27,49 +89,36 @@
     {% endfor %}
 
     <h3 align="center">Create your account!</h3>
-    <form method="post" action="/signup">
+    <form method="post" action="/signup" style="border:1px solid #ccc">
         {% csrf_token %}
-    <table align="center" border="0">
-        <tr style="background-color: antiquewhite;">
-        <div class="form-group">
-           <td><label for="username">Username</label></td>
-            <td><input type="text" class="form-control" id="username" name="username" placeholder="Create A Username (use only letters and numbers)" Required></td>
+        <div class="container">
+            <h1>Sign Up</h1>
+            <p>Please fill in this form to create an account.</p>
+            <hr>
+        
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="uname"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+        
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+        
+            <label for="psw-repeat"><b>Repeat Password</b></label>
+            <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+            
+            <label>
+              <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+            </label>
+            
+            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+        
+            <div class="clearfix">
+              <button type="button" class="cancelbtn">Cancel</button>
+              <button type="submit" class="signupbtn">Sign Up</button>
+            </div>
         </div>
-        </tr>
-        <tr style="background-color: antiquewhite;">
-        <div class="form-group">
-            <td><label for="fname">First Name</label></td>
-            <td><input type="text" class="form-control" id="fname" name="fname" placeholder="Enter Your First Name" Required></td>
-        </div>
-        </tr>
-        <tr style="background-color: antiquewhite;">
-        <div class="form-group">
-            <td><label for="lname">Last Name</label></td>
-            <td><input type="text" class="form-control" id="lname" name="lname" placeholder="Enter Your Last Name" Required></td>
-        </div>
-        </tr>
-        <tr style="background-color: antiquewhite;">
-        <div class="form-group">
-           <td><label for="email">Email</label></td> 
-           <td><input type="email" class="form-control" id="email" name="email" placeholder="Enter Your Email Address" Required></td>
-        </div>
-        </tr>
-        <tr style="background-color: antiquewhite;">
-        <div class="form-group">
-            <td><label for="pass1">Password</label></td>
-            <td><input type="password" class="form-control" id="pass1" name="pass1" placeholder="Create Your Password" Required></td>
-        </div>
-        </tr>
-        <tr style="background-color: antiquewhite;">
-        <div class="form-group">
-            <td><label for="pass2">Confirm Password</label></td>
-            <td><input type="password" class="form-control" id="pass2" name="pass2" placeholder="Confirm Your Password" Required></td>
-        </div>
-        </tr>
-        <tr style="background-color: antiquewhite;">
-        <td><button type="submit" class="btn btn-primary">Sign Up</button></td>
-        </tr>
-    </table>
     </form>
 </body>
 </html>
